# minicuBLAS

./: .gitignore  CMakeLists.txt  main.cu  ncu_summary.md  run_cuda_tests.slurm.sh  tiling.cu
kernels/: flash_attention.cu  flash_attention.cuh  gemm-kernels.cu  gemm-kernels.cuh  kernels.cu  kernels.cuh  rk4_heat3d.cu  rk4_heat3d.cuh
launch/: launch.cu  launch.h
tests/: bench.cu  kernels_correctness_vs_cublas.cu
